--- a/index.html
+++ b/index.html
@@ -200,27 +200,14 @@
             <div class="footer-section">
                 <h4>Recursos</h4>
                 <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Webinars</a></li>
-                    <li><a href="#">Plantillas</a></li>
-                    <li><a href="#">Glosario</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Agile_software_development">Glosario</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
-                <h4>Suscríbete</h4>
-                <p>Recibe nuestras últimas actualizaciones.</p>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Tu email">
-                    <button type="submit"><i class="fas fa-paper-plane"></i></button>
-                </form>
-            </div>
+
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 MetodosAgiles. Todos los derechos reservados.</p>
-            <div class="legal-links">
-                <a href="#">Política de Privacidad</a>
-                <a href="#">Términos de Servicio</a>
-            </div>
+            <p>&copy; 2025 MetodosAgiles. Todos los derechos reservados.</p>
+
         </div>
     </footer>
 
